plugins/kotlin/idea/tests/testData/highlighterMetaInfo/PropertiesWithPropertyDeclarations.kt.highlighting
// FIR_IDENTICAL
val <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PACKAGE_PROPERTY'")!>packageSize<!> = 0
val <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PACKAGE_PROPERTY_CUSTOM_PROPERTY_DECLARATION'")!>packageSizeGetter<!>
<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_KEYWORD'")!>get<!>() = <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PACKAGE_PROPERTY'")!>packageSize<!> * 2

var <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_MUTABLE_VARIABLE'"), HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PACKAGE_PROPERTY_CUSTOM_PROPERTY_DECLARATION'")!>packageSizeSetter<!> = 5
<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_KEYWORD'")!>set<!>(<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>value<!>) {
    <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_BACKING_FIELD_VARIABLE'"), HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_MUTABLE_VARIABLE'")!>field<!> = <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>value<!> * 2
}

var <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_MUTABLE_VARIABLE'"), HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PACKAGE_PROPERTY_CUSTOM_PROPERTY_DECLARATION'")!>packageSizeBean<!> = 5
<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_KEYWORD'")!>get<!>() = <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PACKAGE_PROPERTY'")!>packageSize<!> * 2
<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_KEYWORD'")!>set<!>(<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>value<!>) {
    <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_BACKING_FIELD_VARIABLE'"), HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_MUTABLE_VARIABLE'")!>field<!> = <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>value<!> * 2
}


class <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_CLASS'")!>test<!>() {
    // no highlighting check
    val <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_INSTANCE_PROPERTY'")!>size<!> = 0

    val <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_INSTANCE_PROPERTY'")!>classSize<!> = 0

    val <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION'")!>classSizeGetter<!>
    <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_KEYWORD'")!>get<!>() = <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_INSTANCE_PROPERTY'")!>classSize<!> * 2

    var <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION'"), HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_MUTABLE_VARIABLE'")!>classSizeSetter<!> = 5
    <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_KEYWORD'")!>set<!>(<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>value<!>) {
        <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_BACKING_FIELD_VARIABLE'"), HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_MUTABLE_VARIABLE'")!>field<!> = <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>value<!> * 2
    }

    var <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION'"), HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_MUTABLE_VARIABLE'")!>classSizeBean<!> = 5
    <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_KEYWORD'")!>get<!>() = <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_INSTANCE_PROPERTY'")!>classSize<!> * 2
    <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_KEYWORD'")!>set<!>(<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>value<!>) {
        <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_BACKING_FIELD_VARIABLE'"), HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_MUTABLE_VARIABLE'")!>field<!> = <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>value<!> * 2
    }

    fun <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>callCustomPD<!>() {
        <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION'"), HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_MUTABLE_VARIABLE'")!>classSizeBean<!> = 30
    }
}
